fix spacing issues

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body {
 .content__stats {
     display: flex;
     justify-content: space-between;
-    padding: 1rem 0;
+    padding: .5rem 0;
 }
 
 .stats-price, .stats-time {
@@ -82,7 +82,7 @@ body {
 
 .footer__copy {
     display: flex;
-    gap: .5rem;
+    gap: .25rem;
     margin: 0;
 }
 
@@ -138,7 +138,7 @@ img {
 }
 
 .footer__img {
-    width: 35px;
+    width: 38px;
     border-radius: 100px;
     border: 1px solid var(--white);
 }
